# newServer

./: build.sh  clean.sh  编译说明.txt
apush/: CMakeLists.txt  apush_server_manager.cpp  apush_server_manager.h  base_client.cpp  base_client.h  google_fcm_protoc.cpp  google_fcm_protoc.h  google_fcm_test.cpp.test  google_push_client.cpp  google_push_client.h  http_base.cpp  http_base.h  http_client.cpp  http_client.h  hw_handle_protobuf.cpp  hw_handle_protobuf.h  hw_push_client.cpp  hw_push_client.h  hw_ssl_get_token.cpp  hw_ssl_get_token.h  jpush_client.cpp  jpush_client.h  jpush_protoc.cpp  jpush_protoc.h  mainframe.cpp  mainframe.h  miPushtest.cpp.test  mi_protoc.cpp  mi_protoc.h  mi_push_client.cpp  mi_push_client.h  protobuf_phase.cpp  protobuf_phase.h  push_provide_server.cpp  push_provide_server.h  server.conf  ssl_event.cpp  ssl_event.h  ssl_packet_queue.h  ssl_post_impl.cpp  (+14 more)
channel/: CMakeLists.txt  basehandle.cpp  basehandle.h  channel_chat.cpp  channel_chat.h  channel_notify.cpp  channel_notify.h  common.h  imappframe.cpp  imappframe.h  imframe.cpp  imframe.h  redisMgr.cpp  redisMgr.h  server.conf  thread_pool_manager.h
channel/mod_mongodb/: CMakeLists.txt  channelMongoOperator.cpp  channelMongoOperator.h  channel_offline_msg.cpp  channel_offline_msg.h
client/: CMakeCache.txt  CMakeLists.txt  Common.h  Makefile  ServConn.cpp  ServConn.h  cmake_install.cmake  commandlist.cpp  commandlist.h  main.cpp  userInfoMgr.cpp  userInfoMgr.h
commongrpc/: CMakeLists.txt  grpc.statistic.grpc.pb.cc  grpc.statistic.grpc.pb.h  grpc.statistic.pb.cc  grpc.statistic.pb.h  im.notify.grpc.pb.cc  im.notify.grpc.pb.h  im.notify.pb.cc  im.notify.pb.h  im.radio.grpc.pb.cc  im.radio.grpc.pb.h  im.radio.pb.cc  im.radio.pb.h
data_oper/: AutoPool.cpp  AutoPool.h  CMakeLists.txt  CachePool.cpp  CachePool.h
database/: CMakeLists.txt  mongoDbColl.cpp  mongoDbColl.h  mongoDbManager.cpp  mongoDbManager.h  mongoTask.cpp  mongoTask.h
destopGw/: CMakeLists.txt  basehandle.cpp  basehandle.h  desktopmsgtran.cpp  desktopmsgtran.h  imappframe.cpp  imappframe.h  imframe.cpp  imframe.h  loginCache.cpp  loginCache.h  loginInfo.cpp  loginInfo.h  server.conf  thread_pool.h  thread_pool_manager.cpp
group/: CMakeLists.txt  basehandle.cpp  basehandle.h  commonTaskMgr.cpp  commonTaskMgr.h  dbhelper.cpp  dbhelper.h  groupchat.cpp  groupchat.h  groupcreate.cpp  groupcreate.h  groupjoin.cpp  groupjoin.h  groupleave.cpp  groupleave.h  groupmodify.cpp  groupmodify.h  groupnotify.cpp  groupnotify.h  imappframe.cpp  imappframe.h  imframe.cpp  imframe.h  mysqlhelper.cpp  mysqlhelper.h  pdusender.cpp  pdusender.h  redishelper.cpp  redishelper.h  server.conf
group/mod_common/: im_grpmem.cpp  im_grpmem.h  im_ver.h
group/mod_mongodb/: CMakeLists.txt  grpOfflineMsg.cpp  grpOfflineMsg.h  grpOfflineMsgMgr.cpp  grpOfflineMsgMgr.h
group/mod_mysql/: mysqlGrpmemMgr.cpp  mysqlGrpmemMgr.h  mysqlPool.cpp  mysqlPool.h
group/mod_redis/: redisGrpMgr.cpp  redisGrpMgr.h  redisPool.cpp  redisPool.h
ipush/: CApnsPostData.cpp  CApnsPostData.h  CMakeLists.txt  CPostPduCacheMgr.cpp  CPostPduCacheMgr.h  apns_push_post.cpp  apns_push_post.h  apnsclient.cpp  apnsclient.h  app_pushserver_manager.hpp  clientbase.cpp  clientbase.h  im_push_frame.cpp  im_push_frame.h  jwkencodesign.cpp  jwkencodesign.h  mainframe.cpp  mainframe.h  postDataSender.cpp  postDataSender.h  protohandle.cpp  protohandle.h  pushHandler.cpp  pushHandler.h  pushserver_manager.hpp  ssl_event.cpp  ssl_event.h  ssl_http2.cpp  ssl_http2.h  ssl_post.cpp  ssl_post.h  ssl_post_mgr.cpp  ssl_post_mgr.h  ssl_socket.cpp  ssl_socket.h  utility.hpp  voip_http2_client.cpp  voip_http2_client.h  voip_push_client.cpp  voip_push_client.h  (+4 more)
login/: CMakeLists.txt  imappframe.cpp  imappframe.h  imframe.h  loginCache.cpp  loginCache.h  loginHandle.cpp  loginHandle.h  redis_manager.cpp  redis_manager.h  server.conf  thread_pool_manager.cpp  thread_pool_manager.h
msg/: CMakeLists.txt  Jack_CMakeLists.txt  basehandle.cpp  basehandle.h  commonTaskMgr.cpp  commonTaskMgr.h  exchangeKeyHandle.cpp  exchangeKeyHandle.h  friendhandle.cpp  friendhandle.h  getDataInterfaceManager.cpp  getDataInterfaceManager.h  groupChatHandle.cpp  groupChatHandle.h  grphandle.cpp  grphandle.h  imappframe.cpp  imappframe.h  imframe.cpp  msghandle.cpp  msghandle.h  notify_handle.cpp  notify_handle.h  offLineMsgHandle.cpp  offLineMsgHandle.h  offlineMsgTaskMgr.cpp  offlineMsgTaskMgr.h  server.conf  sighandler.cpp  sighandler.h
msg/mod_common/: CMakeLists.txt  im_friend.cpp  im_friend.h  im_loginInfo.cpp  im_loginInfo.h  im_userInfo.cpp  im_userInfo.h
msg/mod_mongodb/: grpOfflineMsg.cpp  grpOfflineMsg.h  grpOfflineMsgMgr.cpp  grpOfflineMsgMgr.h  offlineMsg.cpp  offlineMsg.h  offlineMsgMgr.cpp  offlineMsgMgr.h
msg/mod_mysql/: CMakeLists.txt  mysqlFriendMgr.cpp  mysqlFriendMgr.h  mysqlPool.cpp  mysqlPool.h  mysqlUserMgr.cpp  mysqlUserMgr.h
msg/mod_redis/: CMakeLists.txt  redisFriendMgr.cpp  redisFriendMgr.h  redisLoginInfoMgr.cpp  redisLoginInfoMgr.h  redisPool.cpp  redisPool.h  redisUserCfgMgr.cpp  redisUserCfgMgr.h  redisUserGrpCfgMgr.cpp  redisUserGrpCfgMgr.h
notifyserver/: CMakeLists.txt  grpcnotifyservice.cpp  grpcnotifyservice.h  imappframe.cpp  imappframe.h  imframe.cpp  imframe.h  notifySendAck.cpp  notifySendAck.h  notify_client.cc  notify_server.cc  pdusender.cpp  pdusender.h  server.conf
testLibuv/: CMakeLists.txt  clientlink.cpp  clientlink.h  clientlinkmgr.cpp  clientlinkmgr.h  configfilereader.cpp  im_time.cpp  im_time.h  imconn.cpp  imconn.h  impdubase.cpp  impdubase.h  lock.cpp  serverinfo.h  serverlink.cpp  serverlink.h  serverlinkmgr.cpp  serverlinkmgr.h  util.h  utilpdu.cpp  utilpdu.h  uv_client.cpp  uv_server.cpp  zookeeper.cpp
wsSvr/: CMakeLists.txt  basehandle.cpp  common.h  configMgr.cpp  configMgr.h  custWebProxy.cpp  custWebProxy.h  custWebTask.cpp  custWebTask.h  customerSvrProxy.cpp  customerSvrProxy.h  im_ver.h  imappframe.cpp  imappframe.h  imframe.cpp  imframe.h  server.conf  userMgr.cpp  userMgr.h  webSvrclientProxy.cpp  webSvrclientProxy.h  wsBase.cpp  wsBase.h
(+211 files in other folders)
